passage à java 17, mise à jour des librairies log4j et jgrapht